<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.lacapitale.corporatif.diagnostic.page</groupId>
	<artifactId>svc-dsp-diagnosticToHealthCheck</artifactId>
	<version>4.0.0</version>
	<packaging>jar</packaging>
	<description>Route d'intégration pour Atlas (liste des sinistres)</description>

	<properties>
		<app.name>svc-dsp-diagnosticToHealthCheck</app.name>
		<jdk.version>1.12</jdk.version>
		<maven.compiler.source>${jdk.version}</maven.compiler.source>
		<maven.compiler.target>${jdk.version}</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<spring.boot-version>2.0.3.RELEASE</spring.boot-version>
	</properties>

	<distributionManagement>
		<repository>
			<id>sedo-artifactory.capitale.qc.ca</id>
			<name>sedo-artifactory.capitale.qc.ca-releases</name>
			<url>http://sedo-artifactory.capitale.qc.ca/artifactory/libs-release-local</url>
		</repository>
		<snapshotRepository>
			<id>sedo-artifactory.capitale.qc.ca</id>
			<name>sedo-artifactory.capitale.qc.ca-snapshots</name>
			<url>http://sedo-artifactory.capitale.qc.ca/artifactory/libs-snapshot-local</url>
			<uniqueVersion>false</uniqueVersion>
		</snapshotRepository>
	</distributionManagement>

	<repositories>
		<repository>
			<id>release</id>
			<name>sedo-artifactory</name>
			<url>http://sedo-artifactory.capitale.qc.ca/artifactory/libs-release-local</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
			<releases>
				<enabled>true</enabled>
			</releases>
		</repository>
		<repository>
			<id>snapshot</id>
			<name>sedo-artifactory</name>
			<url>http://sedo-artifactory.capitale.qc.ca/artifactory/libs-snapshot-local</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<releases>
				<enabled>false</enabled>
			</releases>
		</repository>
	</repositories>


	<dependencyManagement>
		<dependencies>
			<!-- Spring Boot BOM -->
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${spring.boot-version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>

		<dependency>
			<groupId>net.logstash.logback</groupId>
			<artifactId>logstash-logback-encoder</artifactId>
			<version>5.2</version>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-actuator</artifactId>
		</dependency>

			<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

    </dependencies>

	<build>
		<finalName>${app.name}</finalName>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<version>${spring.boot-version}</version>
				<configuration>
					<profiles>
						<profile>devl</profile>
						<profile>test</profile>
						<profile>prod</profile>
					</profiles>
					<jvmArguments>
					</jvmArguments>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>repackage</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.5.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>jdk8-build</id>
			<activation>
				<jdk>8</jdk>
			</activation>
			<build>
				<plugins>
					<plugin>
						<artifactId>maven-surefire-plugin</artifactId>
						<configuration>
							<argLine>--add-modules java.xml.bind --add-opens
								java.base/java.lang=ALL-UNNAMED</argLine>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>
